--- a/style.css
+++ b/style.css
@@ -16,27 +16,68 @@ body {
     background-color: #f4f4f4;
     margin: 0;
     padding: 0;
-    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: Arial, sans-serif;
+
   }
+  .container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100px;
+    width: 800px;
+    background-color:white;
+}
+.image-container {
+  max-width: 90%;
+  display: flex;
+  border-radius: 5px;
+  margin-top: 10px;
+  height: 540px;
+  width: 200px;
+  position: absolute;
+  top: 300px;
+  left: 300px;
+  
+}
   
   .form {
    
-    display: flex;
+    /* display: flex;
     align-items: center;
     width: 100%;
     justify-content: space-between;
-    height: 70vh;
+    height: 80vh;
+    width: 500px;
+    margin-left: 400px; */
+    max-width: 400px;
+    margin: 300px;
+    background-color: #f9f9f9;
+    padding: 20px;
+    margin-top: 80px;
+    border-radius: 3px;
+    background-color: white;
   }
-  .form .left {
-    width: 40%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-}
+  .form p{
+    text-align: center;
+  }
+ .form h4{
+  text-align: right;
+ }
+  .image-container {
+    width: 50%;
+    margin: auto;
+    margin-top: 10px;
+  }
 
-.img .left{
-    width: 90%;
+/* .left {
+  width: 40%;
+  display: flex;
+} */
+
+.left {
+  width: 30%;
 }
   
   
@@ -47,7 +88,7 @@ body {
   }
   
   .form {
-    padding: 20px;
+    padding: 10px;
   }
   
   .form label {
@@ -58,11 +99,11 @@ body {
   .form input[type="text"],
   .form input[type="email"],
   .form input[type="password"] {
-    width: 50%;
+    width: 80%;
     padding: 10px;
     margin-bottom: 15px;
     border: 1px solid #ccc;
-    border-radius: 8px;
+    border-radius: 5px;
     display: flex;
     align-items: center;
     height: 40%;
@@ -70,11 +111,15 @@ body {
   
   .form input[type="checkbox"] {
     margin-right: 5px;
+    margin-top: 30px;
   }
   
+
+
   .form label[for="conditions"] {
-    display: inline-block;
+    /* display: inline-blo */
   }
+    
   
   .form button {
     background-color: #3a5b3a;
@@ -90,51 +135,5 @@ body {
   .form button:hover {
     background-color: rgb(58, 91, 34, 0.915);
   }
-  .btngp .google{
-    background-color: #f5f5f5;
-    border: 30px;
-    color: #0f0000;
-    border: 30px;
-  }
-  .btngp .google:hover{
-    background-color: rgb(58, 91, 34, 0.915);
-    border: 30px;
-    color: #ccc;
-  }
-
   
-  /* .buttons {
-    background-color: #fff;
-    color: #333;
-    padding: 10px 20px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    margin: 0 10px;
-    cursor: pointer;
-    margin-top: 50px;
-    display: flex;
-  } */
-
-  
-  /* .btn {
-    margin-top: 0px;
-    border-bottom: 50px;
-    border-radius: 40px;
-    background-color: rgb(202, 26, 26);
-  } */
-  
-  /* .options button.google {
-    border: 1px solid #4285f4;
-    color: #4285f4;
-  } */
-  
-  /* .options button.google:hover {
-    background-color: #4285f4;
-    color: #fff;
-  }
-  
-  .options button.apple:hover {
-    background-color: #4285f4;
-    color: #fff;
-  } */
   
